feat: add last logout functionality
